[project]
name = "keep-archive-close"
version = "0.1.0"
description = "A simple multi-user voting app for quick decision-making"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.12",
    "aiosqlite==0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
