# SMART APPROACH: Keep performance, drop bloat
[project]
name = "keep-archive-close"
version = "0.1.0"
description = "A simple multi-user voting app for quick decision-making"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.32.0",
    # Performance optimizations (from [standard])
    "uvloop==0.22.1",      # 2-4x faster async performance
    "httptools==0.7.1",    # 2x faster HTTP parsing
    "websockets==16.0",    # Required for WebSocket support
    # Application dependencies
    "jinja2==3.1.4",
    "python-multipart==0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-timeout==2.3.1",
    "httpx==0.27.2",
    "ruff==0.15.9",
    # Development-only from [standard]
    "watchfiles==1.1.1",   # For uvicorn --reload
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 5
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
